--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <body>
     <h1>sdfiush</h1>
     <img src="image.jpg" alt="">
+    <!-- third version -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora fugit quasi doloribus praesentium dolorum
+        eveniet voluptatum, voluptatem a nisi nulla quod laborum optio quidem similique voluptate recusandae totam, nemo
+        enim!</p>
 </body>
 
 </html>
